wip: sql runner
